2012-09-05  Nick Alcock  <nick.alcock@oracle.com>

	* uts/common/sys/dtrace.h: No longer include <sys/ctf_api.h>...
	* libdtrace/dtrace.h: ... do it here instead.
	* dtrace-utils.spec: Split out a -devel package containing
	libdtrace/dtrace.h that depends on libdtrace-ctf-devel.
	* libdtrace-ctf: Pull in the <sys/ctf_types.h> move.

	* uts/common/sys/dtrace_ioctl.h: No longer include
	<linux/types.h>.

2012-09-03  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace-ctf: Pull in the libdtrace-ctf-devel package split.
	* dtrace-utils.spec: Adapt to libdtrace-ctf-devel package split.
	Next version is 0.3.  Use macros for most file locations.
	Improve RPM changelog.

2012-08-30  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace/dt_pcb.h (pcb_sou_deref): New.
	* libdtrace/dt_lex.l (id_or_type): Use it to track certain-to-
	be-identifiers after -> and .
	* libdtrace/dt_grammar.y (postfix_expression): Remove
	various DT_TOK_TNAME rules: no longer required.
	(enum_specifier): Likewise.
	(enum_definition): Likewise.
	* unittest/types/tst.notypeload.sh: Test this case.

	* Makeconfig: Filter --coverage out of the LDFLAGS as well as the
	CFLAGS.
	* README.build-system (name_NOLDFLAGS): New, filter out unwanted
	LDFLAGS from a target.
	* Makefunctions (shlib-template): Implement it for shared libraries.
	(cmd-template): Likewise for binaries.
	* test/triggers/Build (TRIGGERS): Use it to filter out test coverage
	info from triggers.
	* test/utils/Build (CMDS): Likewise, for utils.

2012-08-29  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace/dt_lex.l (yyinit): Call yyrestart().
	* runtest.sh: Add @@no-xfail.  Avoid test-output corruption when tests
	hang.  Revamp success/failure detection.
	* test/unittest/profile-n/err.*.d: @@skip -> @@no-xfail.

2012-08-10  Nick Alcock  <nick.alcock@oracle.com>

	* runtest.sh: Allow @@unload-modules in test/modules
	to specify modules that should only be unloaded, not
	loaded.
	* test/modules: Use it for dtrace-ctf and dtrace.